--- a/src/public/index.html
+++ b/src/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Chat</title>
+  <title>Chat Flappy Eagle</title>
   <!-- BOOTSWATCH COSMO THEME CDN -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootswatch/4.3.1/cosmo/bootstrap.min.css">
   <!-- FONT AWESOME -->
@@ -15,10 +15,11 @@
 </head>
 
 <body>
+<div class="fondo">
   <!-- NAVBAR -->
-  <nav class="navbar navbar-dark bg-primary">
+  <nav class="navbar navbar-dark bg-dark">
     <a class="navbar-brand mx-auto" href="/">
-      Chat Online
+      Chat Online Flappy Eargle
     </a>
   </nav>
 
@@ -29,7 +30,7 @@
         <div class="col-md-4 mx-auto">
           <div class="card">
             <div class="card-header">
-              <h3 align="center">Ingresa un usuario <img src="img/online-chat.png" height="40" align="right"></h3>
+              <h3 align="center">Ingresa un usuario</h3>
             </div>
             <p id="nickError"></p>
             <div class="card-body">
@@ -77,13 +78,13 @@
             </div>
             <div class="card-body">
               <div id="usernames"></div>
-              <img src="img/conectados.jpg" height="158">
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
+</div>
 
   <!-- SCRIPTS -->
   <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
